adds hw26 implementation