@@ -1,7 +1,7 @@
 package telran.util;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
-import java.util.List;
 import java.util.NoSuchElementException;
 
 /**
@@ -9,13 +9,13 @@ import java.util.NoSuchElementException;
  * all specified below methods should be written with complexity O[1] 
  *
  */
-public class MyStack {
+public class MyStackArrayList {
 //TODO fields
 	static int MAX_LENGTH = 100;
-	// This LinkedList saves all of MyStack Elements
-	private LinkedList<Integer> stack = new LinkedList<>();
-	// The last element of this LinkedList is always Max element of My Stack
-	private LinkedList<Integer> maxElements = new LinkedList<>();
+	// This ArrayList saves all of MyStackArrayList Elements
+	private ArrayList<Integer> stack = new ArrayList<>();
+	// The last element of this ArrayList is always Max element of My Stack
+	private ArrayList<Integer> maxElements = new ArrayList<>();
 	// Done
 	/*
 	 * removes the last element and returns it
@@ -26,9 +26,9 @@ public class MyStack {
 		if (stack.isEmpty()) {
 			throw new NoSuchElementException();
 		}
-		int res = stack.removeLast();
-		if (res == maxElements.getLast()) {
-			maxElements.removeLast();
+		int res = stack.remove(stack.size() -1);
+		if (res == maxElements.get(maxElements.size()-1)) {
+			maxElements.remove(maxElements.size()-1);
 		}
 		return res;
 //		Done
@@ -36,7 +36,7 @@ public class MyStack {
 	/**
 	 * 
 	 * @return true it the stack is empty
-	 */ 
+	 */
 	boolean isEmpty() {
 		//TODO
 		return stack.isEmpty();
@@ -46,13 +46,13 @@ public class MyStack {
 	 * adds the given element at the end of the stack
 	 * @param element
 	 */
-	void push(Integer element) throws Exception{
+	void push(Integer element) throws Exception {
 		//TODO
 		if(stack.size() >= MAX_LENGTH) {
 			throw new Exception("Stack is full");
 		}
 		stack.add(element);
-		if (maxElements.isEmpty() || element >= maxElements.getLast()) {
+		if (maxElements.isEmpty() || element >= maxElements.get(maxElements.size()-1)) {
 			maxElements.add(element);
 		}
 //		Done
@@ -65,7 +65,7 @@ public class MyStack {
 		if (maxElements.isEmpty()) {
 			throw new NoSuchElementException();
 		}
-		return maxElements.getLast();
+		return maxElements.get(maxElements.size()-1);
 //		Done
 	}
 }
